<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- maxiaojing LoginView -->
    <string name="app_name_login">iSDUT</string>
    <string name="login_tv_name">学号：</string>
    <string name="login_tv_pwd_login">登录密码：</string>
    <string name="login_tv_pwd_card">校园卡密码：</string>
    <string name="login_btn_login">登录</string>
    <string name="login_btn_reset">重置</string>
    <string name="autologin">自动登录</string>
    <string name="boookhint">请输入你要搜索的图书关键字</string>
    <string name="mycourse">-   我的课表</string>
    <string name="myscore">-   我的成绩</string>
     <string name="myexam">-   我的考试</string>
    <string name="mycet">-   四六级成绩</string>
    <string name="mycurrent">-   当前学期成绩</string>
    <string name="timetable">-   查看校历</string>
    <string name="myschool">-   校园导航 </string>  
    
    <string name="hello">Hello World, ISDUTActivity!</string>
    <string name="app_name">山理助手</string>
    <string name="book">-   我的借阅</string>
    <string name="sbook">搜索结果</string>
	<string name="main_tvuname">姓名:</string>
	<string name="main_tvuid">学号:</string>
	<string name="main_tvwether">天气</string>
	<string name="main_tvsets">设置</string>
	<string name="main_tvaboutUs">关于我们</string>
	<string name="main_btchange">切换账号</string>
	<string name="main_btquit">退出</string>

	
	 <string name="kong"></string>
    <string name="action_settings">Settings</string>
    <string name="rememberpw">记住密码</string>
    <string name="login">登录</string>
    <string name="hxuehao">学号</string>
    <string name="hpassword">密码</string>
    <string name="bookpw">图书馆密码</string>
    <string name="No">编号</string>
    <string name="coursename">名称</string>
    <string name="cscore">成绩</string>
    <!-- 成绩 -->
    <string name="gpaname">  绩点：  </string>
    <string name="cettime">时间</string>
    <string name="cetlevel">级别</string>
    <string name="cetscore">成绩</string>
    
    <!-- 课程表 -->
    <string name="monday">周一</string>
    <string name="tuesday">周二</string>
    <string name="wednesday">周三</string>
    <string name="thursday">周四</string>
    <string name="friday">周五</string>
    <string name="saturday">周六</string>
    <string name="sunday">周日</string>
    <string name="class12">1\n\n2\n—</string>
    <string name="class34">3\n\n4\n—</string>
    <string name="class56">5\n\n6\n—</string>
    <string name="class78">7\n\n8\n—</string>
    <string name="class90">9\n\n10\n—</string>

    
    <!-- 图书馆 -->
    <string name="menutitle">功能</string>
    <string name="Edu_admin_sys">教务系统</string>
    <string name="library">图书馆</string>
    <string name="others">其他应用</string>
	<string name="edittext">请输入要检索书名的关键字</string>
	<string name="editBtn">搜索</string>
    
    <!-- 天气预报 -->
    <string name="btn_apply">查询</string>
    <string name="text_hint">城市中文名</string>
    <string name="province">省份</string>
    <string name="city">城市</string>
    
    <!--信息查询 -->
    <string name="infophonenum">电话查询</string>
    <string name="infourl">网址查询</string>
    <string name="infoimg">选中的 底边框</string>
	
</resources>