<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:cacheColorHint="#00000000" 
    android:background="#EEEEEE">
    
<LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="40.0dip"
        android:cacheColorHint="#00000000" 
        android:background="#EEEEEE" >

        <TextView
            android:id="@+id/text1"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
            android:gravity="center"
            android:text="@string/infophonenum"
            android:textColor="#000000"
            android:cacheColorHint="#00000000" 
            android:textSize="18.0dip" />

        <TextView
            android:id="@+id/text2"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
            android:gravity="center"
            android:text="@string/infourl"
            android:textColor="#000000"
            android:cacheColorHint="#00000000" 
            android:textSize="18.0dip" />

    </LinearLayout>

    <ImageView
        android:id="@+id/cursor"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#EEEEEE"
        android:scaleType="matrix"
        android:src="@drawable/roller"
        android:cacheColorHint="#00000000" 
        android:contentDescription="@string/infoimg" />

    <android.support.v4.view.ViewPager
        android:id="@+id/viewpage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:cacheColorHint="#00000000" 
         />
</LinearLayout>