<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e9e9e9"
    android:orientation="vertical" >

    <TableRow
        android:id="@+id/table_title2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"  >

        <TextView
            android:id="@+id/text_id2"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:gravity="center"
            android:paddingBottom="10dip"
            android:paddingTop="10dip"
            android:text="@string/No"
            android:textColor="#000000" />

        <View
            android:layout_width="1.5dip"
            android:layout_height="fill_parent"
            android:background="#ffffff" />

        <TextView
            android:id="@+id/text_name2"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:paddingBottom="10dip"
            android:paddingTop="10dip"
            android:text="@string/coursename"
            android:textColor="#000000" />

        <View
            android:layout_width="1.5dip"
            android:layout_height="fill_parent"
            android:background="#ffffff" />

        <TextView
            android:id="@+id/text_score2"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingBottom="10dip"
            android:paddingTop="10dip"
            android:text="@string/cscore"
            android:textColor="#000000" />
    </TableRow>

    <ListView
        android:id="@+id/list2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:divider="#31d3e1"
        android:dividerHeight="1px"
        android:cacheColorHint="@android:color/transparent"
        android:fadingEdge="none"
        android:scrollbars="none" >
    </ListView>

</LinearLayout>